--- a/templates/submission/status.html
+++ b/templates/submission/status.html
@@ -14,7 +14,7 @@
                 request = false;
                 blocked = true;
                 $.ajax({
-                    url: '{{ url('submission_testcases_query') }}',
+                    url: '{{ url('submission_testcases_query')}}',
                     data: {id: '{{ submission.id }}'}
                 }).done(function (data) {
                     list.empty().html(data).find('.toggle').each(function () {
@@ -61,6 +61,7 @@
         <div><a href="{{ url('problem_submit', submission.problem.code, submission.id) }}">{{ _('Resubmit') }}</a></div>
     {% endif %}
     {% if perms.judge.rejudge_submission %}
+        <div><a href = "{{ url('simulation_detail', submission.id) }}">{{ _('View Simulation') }}</a></div>
         <div>
             <form action="{{ url('submission_rejudge') }}" method="post">
                 {% csrf_token %}
