--- a/templates/submission/status.html
+++ b/templates/submission/status.html
@@ -61,7 +61,7 @@
         <div><a href="{{ url('problem_submit', submission.problem.code, submission.id) }}">{{ _('Resubmit') }}</a></div>
     {% endif %}
     {% if perms.judge.rejudge_submission %}
-        <div><a href = "{{ url('simulation_detail', submission.id) }}">{{ _('View Simulation') }}</a></div>
+        <div><a href = "{{ url('simulation_detail', submission.id) }}">{{ _('View Simular') }}</a></div>
         <div>
             <form action="{{ url('submission_rejudge') }}" method="post">
                 {% csrf_token %}
