--- a/templates/submission/list.html
+++ b/templates/submission/list.html
@@ -357,7 +357,7 @@
 
             <div id="submissions-table">
                 {% set profile_id = request.profile.id if request.user.is_authenticated else 0 %}
-                {% for submission in submissions %}
+                {% for submission in list_all_simulation %}
                     <div class="submission-row" id="{{ submission.id }}">
                         {% with problem_name=show_problem and submission.problem.i18n_name %}
                             {% include "submission/row.html" %}
