--- a/templates/submission/simulation.html
+++ b/templates/submission/simulation.html
@@ -20,7 +20,7 @@
     </style>
 {% endblock %}
 
-{% if user_simular %}
+{% if user_simular != '' %}
     {% block body %}
         <br>
         <h2>{{ _('Simularity') }} : <strong>{{max_simular}} %</strong></h2>
@@ -64,6 +64,6 @@
         </div>
     {% endblock %}
 {% endif %}
-{% if !user_simular %}
+{% if user_simular == '' %}
         <p>Nothing!</p>
 {% endif %}
